# asciicast-compose

./: .gitignore  README.md  build.gradle.kts  gradle.properties  index.html  settings.gradle.kts
.github/workflows/: README.md  ci.yml  dependencies.yml  manual-release-build.yml  pr-checks.yml  publish.yml  release.yml
docs/: ADDING_VT_BACKEND.md  ARCHITECTURE.md  RENDERING_NOTES.md  SAMPLE_APP.md
docs/compose-api/: API_DESIGN.md  ERGONOMICS_REVIEW.md  RESEARCH_NOTES.md
formats/: build.gradle.kts
formats/src/main/kotlin/uk/adedamola/asciicast/formats/: AsciicastModels.kt  AsciicastParser.kt
formats/src/test/kotlin/uk/adedamola/asciicast/formats/: AsciicastParserTest.kt
lib/: build.gradle.kts  index.html
lib/[root]/: get-platform-name.html  index.html
player-core/: build.gradle.kts
player-core/src/main/kotlin/uk/adedamola/asciicast/player/: AsciinemaPlayer.kt  PlaybackSource.kt  PlayerState.kt  RecordingSource.kt
player-core/src/test/kotlin/uk/adedamola/asciicast/player/: AsciinemaPlayerTest.kt  FakeTerminal.kt
renderer-compose/: build.gradle.kts
renderer-compose/src/main/kotlin/uk/adedamola/asciicast/renderer/: AsciinemaPlayerState.kt  TerminalCanvas.kt
sample-app/: build.gradle.kts
sample-app/src/main/: AndroidManifest.xml
sample-app/src/main/res/values/: strings.xml
streaming-alis/: build.gradle.kts
vt-api/: build.gradle.kts
vt-avt/: README.md  build.gradle.kts
vt-avt/rust/: Cargo.toml
vt-avt/rust/src/: lib.rs
vt-jediterm/: README.md  build.gradle.kts
vt-termux/: README.md  build.gradle.kts
(+21 files in other folders)
