[package]
name = "asciicast_vt_avt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# TODO: Add avt dependency when implementing
# avt = { version = "0.x", features = ["..."] }

# JNI bindings
jni = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
