[package]
name = "asciicast_vt_avt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# AVT terminal emulator
avt = { git = "https://github.com/asciinema/avt", branch = "main" }

# JNI bindings
jni = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
